# easy-stereo-slam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  run_slam.cpp
config/: default.yaml
include/: algorithm.hpp  backend.hpp  camera.hpp  config.hpp  dataset.hpp  feature.hpp  frame.hpp  frontend.hpp  g2o_types.hpp  map.hpp  mappoint.hpp  viewer.hpp  visual_odometry.hpp
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
